--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,16 +1,17 @@
-# theme = "modus_operandi_tinted"
-theme = "yo_modified"
-
-# [theme]
-# dark = "yo_modified"
-# light = "yo_light_modified"
+[theme]
+dark = "rosewood-blue"
+light = "gruvbox_light"
 
 [keys.normal.space.t]
 "0" = ":theme github_light"
-"6" = ":theme yo_modified"
+"1" = ":theme wolf-alabaster-light-bg"
+"3" = ":theme wolf-alabaster-dark"
+"4" = ":theme rosewood-green"
+"5" = ":theme rosewood-blue"
+"6" = ":theme rosewood"
 "7" = ":theme gruvbox_light"
 "8" = ":theme yo_light"
-"9" = ":theme flatwhite"
+"9" = ":theme flatwhite_modified"
 # run rust unit tests using %{buffer_name} to construct module path
 t = [
   ":sh RUSTFLAGS=-Awarnings cargo test -q -- --nocapture %sh{echo %{buffer_name} | sed -E 's|^src/||; s|/mod\\.rs$||; s|\\.rs$||; s|/|::|g' }",
@@ -32,31 +33,12 @@ completion-timeout = 5
 text-width = 80
 jump-label-alphabet = "tnseriplfuwydhcxoaqz"
 
-[editor.whitespace.render]
-space = "all"
-newline = "all"
-
-[editor.whitespace.characters]
-space = "·"
-newline = "⏎"
-
-[editor.inline-diagnostics]
-cursor-line = "warning" # show warnings and errors on the cursorline inline
-
-[editor.auto-save]
-after-delay.enable = true
-after-delay.timeout = 0
-
-[editor.cursor-shape]
-insert = "bar"
-normal = "block"
-select = "underline"
-
 [editor.statusline]
 left = [
   "mode",
   "spinner",
   "version-control",
+  # more centered to have it on left currently
   "file-absolute-path",
   "read-only-indicator",
   "file-modification-indicator",
@@ -72,41 +54,71 @@ right = [
 ]
 mode = { normal = "🦊 NOR", insert = "🪶 INS", select = "🔍 SEL" }
 
+[editor.lsp]
+display-progress-messages = true
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
+
 [editor.file-picker]
 hidden = false
 
-[editor.lsp]
-display-inlay-hints = true
-display-progress-messages = true
+[editor.auto-save]
+after-delay.enable = true
+after-delay.timeout = 0
+
+[editor.whitespace.render]
+space = "all"
+newline = "all"
+[editor.whitespace.characters]
+space = "·"
+newline = "⏎"
+
+[editor.indent-guides]
+render = true
+character = '┊' # Some characters that work well: "▏", "┆", "┊", "⸽" 
+skip-levels = 1
+
+[editor.inline-diagnostics]
+cursor-line = "warning" # show warnings and errors on the cursorline inline
+
+[editor.word-completion]
+trigger-length = 3
 
 [keys.normal]
+x = ["extend_to_line_bounds", "select_mode"]
+X = ["extend_line_below"]
+esc = ["collapse_selection", "keep_primary_selection", ":w"]
 "{" = ["goto_prev_paragraph", "collapse_selection"]
 "}" = ["goto_next_paragraph", "collapse_selection"]
 tab = "move_parent_node_end"
 S-tab = "move_parent_node_start"
-X = "select_line_above"
 "," = "repeat_last_motion"
-esc = ["collapse_selection", "keep_primary_selection", ":w"]
 D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection", ":w"]
-# Like in principle but buggy with auto format on save...
-# o = ["open_below", "normal_mode"]
-# O = ["open_above", "normal_mode"]
-
-[keys.insert]
-S-tab = "move_parent_node_start"
+";" = "flip_selections"
+ret = "@gw"
 
 [keys.select]
+esc = ["collapse_selection", "keep_primary_selection", "normal_mode", ":w"]
 "}" = "goto_next_paragraph"
 "{" = "goto_prev_paragraph"
 tab = "extend_parent_node_end"
 S-tab = "extend_parent_node_start"
 "," = "repeat_last_motion"
 D = ["extend_to_line_bounds", "delete_selection", "normal_mode"]
+"g" = { "e" = "extend_to_file_end" }
+";" = "flip_selections"
+ret = "@gw"
+
+[keys.insert]
+S-tab = "move_parent_node_start"
 
 [keys.normal.space]
 # toggle diagnostic levels
 # TODO: redo this when https://github.com/helix-editor/helix/pull/12203 lands
-d = [":toggle inline-diagnostics.other-lines error warning", ":toggle end-of-line-diagnostics error warning"]
+# d = [":toggle inline-diagnostics.other-lines error warning", ":toggle end-of-line-diagnostics error warning"]
 i = ":toggle lsp.display-inlay-hints"
 x = [":bc"]
 # yazi
@@ -118,7 +130,7 @@ e = [
   ':redraw',
 ]
 # find and replace using scooter
-s = [
+R = [
     ":write-all",
     ":insert-output scooter --no-stdin >/dev/tty",
     ":redraw",
@@ -134,15 +146,23 @@ g = [
     ":reload-all"
 ]
 # config
-"," = ":config-open"
-"C-," = ":config-reload"
+# "," = ":config-open"
+# "C-," = ":config-reload"
 # open first diagnostic in bacon-locations
-E = ":open %sh{head -n 1 .bacon-locations}"
+# E = ":open %sh{head -n 1 .bacon-locations}"
+# shows a diagnostic picker that shows errors only
+E = "@ D%sev error"
 # daily journal
 j = ":open %sh{daily_journal}"
+# TODO: wanna get smartcat output in a new buffer - I think that would be best
+# space = [
+#   ":vs",
+#   ":n",
+# ]
 
-[editor.indent-guides]
-render = true
-character = '┊' # Some characters that work well: "▏", "┆", "┊", "⸽" 
-skip-levels = 1
+# config
+[keys.normal.space.","]
+"c" = ":config-open"
+"l" = ":open ~/.config/helix/languages.toml"
+"r" = ":config-reload"
 
