--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -3,6 +3,11 @@ use = "yazi-rs/plugins:full-border"
 rev = "de53d90"
 hash = "3996fc74044bc44144b323686f887e1"
 
+[[plugin.deps]]
+use = "yazi-rs/plugins:zoom"
+rev = "19dc890"
+hash = "9dee2bf990ea941ccf67df74bca45468"
+
 [[flavor.deps]]
 use = "dangooddd/kanagawa"
 rev = "31167ed"
