--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -2,6 +2,106 @@
 dark = "rosewood-blue"
 light = "gruvbox_light"
 
+# --------------------keys--------------------
+[keys.normal]
+x = ["extend_to_line_bounds", "select_mode"]
+X = ["extend_line_below"]
+esc = ["collapse_selection", "keep_primary_selection", ":w"]
+# "{" = ["goto_prev_paragraph", "collapse_selection"]
+# "}" = ["goto_next_paragraph", "collapse_selection"]
+tab = "move_parent_node_end"
+S-tab = "move_parent_node_start"
+"," = "repeat_last_motion"
+D = [
+  "ensure_selections_forward",
+  "extend_to_line_end",
+  "delete_selection",
+  ":w"
+]
+";" = "flip_selections"
+ret = "@gw"
+# like in principle - in practice need to fix tabbing each time we insert on new line...
+# o = ["open_below", "normal_mode"]
+# O = ["open_above", "normal_mode"]
+
+[keys.normal.space]
+# toggle diagnostic levels
+# TODO: redo this when https://github.com/helix-editor/helix/pull/12203 lands
+# d = [":toggle inline-diagnostics.other-lines error warning", ":toggle end-of-line-diagnostics error warning"]
+i = ":toggle lsp.display-inlay-hints"
+x = [":bc"]
+X = [":bc!"]
+# yazi
+e = [
+  ":sh rm -f /tmp/unique-file",
+  ":insert-output yazi %{buffer_name} --chooser-file=/tmp/unique-file",
+  ':insert-output echo "\x1b[?1049h\x1b[?2004h" > /dev/tty',
+  ":open %sh{cat /tmp/unique-file}",
+  ":redraw",
+]
+# find and replace using scooter
+R = [
+  ":write-all",
+  ":insert-output scooter --no-stdin >/dev/tty",
+  ":redraw",
+  ":reload-all"
+]
+# lazygit
+g = [
+  ":write-all",
+  ":new",
+  ":insert-output lazygit",
+  ":buffer-close!",
+  ":redraw",
+  ":reload-all"
+]
+# config
+# "," = ":config-open"
+# "C-," = ":config-reload"
+# open first diagnostic in bacon-locations
+# E = ":open %sh{head -n 1 .bacon-locations}"
+# shows a diagnostic picker that shows errors only
+E = "@ D%sev error"
+# daily journal
+j = ":open %sh{daily_journal}"
+# TODO: wanna get smartcat output in a new buffer - I think that would be best
+# space = [
+#   ":vs",
+#   ":n",
+# ]
+
+# --------------------ai--------------------
+[keys.normal.space."*"]
+# yank current file language into a register, and append it to output?
+# that way we can set syntax highlighting and stuff too... set-language
+# refactor
+r = [
+  ":clipboard-yank",
+  ":vnew",
+  ":clipboard-paste-after",
+  ":select-all",
+  ":pipe sc"
+]
+# no pipe - can be async?
+o = [
+  ":clipboard-yank",
+  ":vnew",
+  ":clipboard-paste-after",
+  ":select-all",
+  ":append-output sc \"%{selection}\""
+]
+
+# is there a good way to insert into a register from a shell expansion?
+
+# FIXME: want to do a blocking bg shell call that inserts into a text file in the bg and when that's ready, open a new buffer and paste the results there.
+# TODO:
+# - summarize
+# - impl/one-shot
+# - test
+# - analyze for potential issues
+# -
+
+# --------------------themes--------------------
 [keys.normal.space.t]
 "0" = ":theme github_light"
 "1" = ":theme wolf-alabaster-light-bg"
@@ -17,16 +117,43 @@ t = [
   ":sh RUSTFLAGS=-Awarnings cargo test -q -- --nocapture %sh{echo %{buffer_name} | sed -E 's|^src/||; s|/mod\\.rs$||; s|\\.rs$||; s|/|::|g' }",
 ]
 
+# --------------------config--------------------
+[keys.normal.space.","]
+"c" = ":config-open"
+"l" = ":open ~/.config/helix/languages.toml"
+"r" = ":config-reload"
+
+[keys.select]
+esc = ["collapse_selection", "keep_primary_selection", "normal_mode", ":w"]
+# "}" = "goto_next_paragraph"
+# "{" = "goto_prev_paragraph"
+tab = "extend_parent_node_end"
+S-tab = "extend_parent_node_start"
+"," = "repeat_last_motion"
+D = ["extend_to_line_bounds", "delete_selection", "normal_mode"]
+"g" = { "e" = "extend_to_file_end" }
+";" = "flip_selections"
+ret = "@gw"
+
+[keys.insert]
+S-tab = "move_parent_node_start"
+C-a = "insert_at_line_start"
+C-e = "insert_at_line_end"
+C-b = "move_char_left"
+C-f = "move_char_right"
+C-c = "signature_help"
+
+# --------------------editor--------------------
 [editor]
 bufferline = "always"
 scrolloff = 30
 line-number = "relative"
-default-yank-register = '+'
+default-yank-register = "+"
 mouse = false
 cursorline = true
 color-modes = true
 completion-trigger-len = 2
-shell = ['fish', '-c']
+shell = ["fish", "-c"]
 completion-timeout = 5
 # FIXME: ruler is ugly rn - update when ruler looks prettier
 # rulers = [80]
@@ -56,6 +183,8 @@ mode = { normal = "🦊 NOR", insert = "🪶 INS", select = "🔍 SEL" }
 
 [editor.lsp]
 display-progress-messages = true
+# blocks code when it pops up
+auto-signature-help = false
 
 [editor.cursor-shape]
 insert = "bar"
@@ -72,97 +201,18 @@ after-delay.timeout = 0
 [editor.whitespace.render]
 space = "all"
 newline = "all"
+
 [editor.whitespace.characters]
 space = "·"
 newline = "⏎"
 
 [editor.indent-guides]
 render = true
-character = '┊' # Some characters that work well: "▏", "┆", "┊", "⸽" 
+character = "┊"  # Some characters that work well: "▏", "┆", "┊", "⸽"
 skip-levels = 1
 
 [editor.inline-diagnostics]
-cursor-line = "warning" # show warnings and errors on the cursorline inline
+cursor-line = "warning"  # show warnings and errors on the cursorline inline
 
 [editor.word-completion]
 trigger-length = 3
-
-[keys.normal]
-x = ["extend_to_line_bounds", "select_mode"]
-X = ["extend_line_below"]
-esc = ["collapse_selection", "keep_primary_selection", ":w"]
-"{" = ["goto_prev_paragraph", "collapse_selection"]
-"}" = ["goto_next_paragraph", "collapse_selection"]
-tab = "move_parent_node_end"
-S-tab = "move_parent_node_start"
-"," = "repeat_last_motion"
-D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection", ":w"]
-";" = "flip_selections"
-ret = "@gw"
-
-[keys.select]
-esc = ["collapse_selection", "keep_primary_selection", "normal_mode", ":w"]
-"}" = "goto_next_paragraph"
-"{" = "goto_prev_paragraph"
-tab = "extend_parent_node_end"
-S-tab = "extend_parent_node_start"
-"," = "repeat_last_motion"
-D = ["extend_to_line_bounds", "delete_selection", "normal_mode"]
-"g" = { "e" = "extend_to_file_end" }
-";" = "flip_selections"
-ret = "@gw"
-
-[keys.insert]
-S-tab = "move_parent_node_start"
-
-[keys.normal.space]
-# toggle diagnostic levels
-# TODO: redo this when https://github.com/helix-editor/helix/pull/12203 lands
-# d = [":toggle inline-diagnostics.other-lines error warning", ":toggle end-of-line-diagnostics error warning"]
-i = ":toggle lsp.display-inlay-hints"
-x = [":bc"]
-# yazi
-e = [
-  ':sh rm -f /tmp/unique-file',
-  ':insert-output yazi %{buffer_name} --chooser-file=/tmp/unique-file',
-  ':insert-output echo "\x1b[?1049h\x1b[?2004h" > /dev/tty',
-  ':open %sh{cat /tmp/unique-file}',
-  ':redraw',
-]
-# find and replace using scooter
-R = [
-    ":write-all",
-    ":insert-output scooter --no-stdin >/dev/tty",
-    ":redraw",
-    ":reload-all"
-]
-# lazygit
-g = [
-    ":write-all", 
-    ":new", 
-    ":insert-output lazygit", 
-    ":buffer-close!", 
-    ":redraw", 
-    ":reload-all"
-]
-# config
-# "," = ":config-open"
-# "C-," = ":config-reload"
-# open first diagnostic in bacon-locations
-# E = ":open %sh{head -n 1 .bacon-locations}"
-# shows a diagnostic picker that shows errors only
-E = "@ D%sev error"
-# daily journal
-j = ":open %sh{daily_journal}"
-# TODO: wanna get smartcat output in a new buffer - I think that would be best
-# space = [
-#   ":vs",
-#   ":n",
-# ]
-
-# config
-[keys.normal.space.","]
-"c" = ":config-open"
-"l" = ":open ~/.config/helix/languages.toml"
-"r" = ":config-reload"
-
