--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -7,6 +7,8 @@ light = "gruvbox_light"
 x = ["extend_to_line_bounds", "select_mode"]
 X = ["extend_line_below"]
 esc = ["collapse_selection", "keep_primary_selection", ":w"]
+p = "paste_before"
+P = "paste_after"
 # "{" = ["goto_prev_paragraph", "collapse_selection"]
 # "}" = ["goto_next_paragraph", "collapse_selection"]
 tab = "move_parent_node_end"
@@ -99,6 +101,9 @@ o = [
 # - impl/one-shot
 # - test
 # - analyze for potential issues
+# - explain this code
+# - chat/conversation
+#   - auto-extend
 # -
 
 # --------------------themes--------------------
@@ -125,6 +130,8 @@ t = [
 
 [keys.select]
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode", ":w"]
+p = "paste_before"
+P = "paste_after"
 # "}" = "goto_next_paragraph"
 # "{" = "goto_prev_paragraph"
 tab = "extend_parent_node_end"
