--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -9,8 +9,6 @@ X = ["extend_line_below"]
 esc = ["collapse_selection", "keep_primary_selection", ":w"]
 "{" = ["goto_prev_paragraph"]
 "}" = ["goto_next_paragraph"]
-tab = "move_parent_node_end"
-S-tab = "move_parent_node_start"
 "," = "repeat_last_motion"
 D = [
   "ensure_selections_forward",
@@ -23,6 +21,11 @@ ret = "@gw"
 # like in principle - in practice need to fix tabbing each time we insert on new line...
 # o = ["open_below", "normal_mode"]
 # O = ["open_above", "normal_mode"]
+# FIXME: enable smart tabs once enhanced kitty keyboard protocol supported in alacritty
+# - https://github.com/alacritty/alacritty/issues/8836
+# - https://docs.helix-editor.com/master/editor.html#editorsmart-tab-section
+# tab = "move_parent_node_end"
+# S-tab = "move_parent_node_start"
 
 [keys.normal.space]
 # toggle diagnostic levels
@@ -130,22 +133,25 @@ t = [
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode", ":w"]
 "{" = ["goto_prev_paragraph"]
 "}" = ["goto_next_paragraph"]
-tab = "extend_parent_node_end"
-S-tab = "extend_parent_node_start"
 "," = "repeat_last_motion"
 D = ["extend_to_line_bounds", "delete_selection", "normal_mode"]
 "g" = { "e" = "extend_to_file_end" }
 ";" = "flip_selections"
 ret = "@gw"
+# FIXME: needed for smart-tab but break Ctrl-i in zellij
+# tab = "move_parent_node_end"
+# S-tab = "move_parent_node_start"
 
 [keys.insert]
-tab = "move_parent_node_end"
-S-tab = "move_parent_node_start"
 C-a = "insert_at_line_start"
 C-e = "insert_at_line_end"
 C-b = "move_char_left"
 C-f = "move_char_right"
 C-c = "signature_help"
+# FIXME: get smart-tab working?
+# FIXME: not being able to insert a tab in insert mode is annoying
+# tab = "move_parent_node_end"
+# S-tab = "move_parent_node_start"
 
 # --------------------editor--------------------
 [editor]
@@ -156,7 +162,7 @@ default-yank-register = "+"
 mouse = false
 cursorline = true
 color-modes = true
-completion-trigger-len = 2
+completion-trigger-len = 1
 shell = ["fish", "-c"]
 completion-timeout = 5
 # FIXME: ruler is ugly rn - update when ruler looks prettier
@@ -219,4 +225,4 @@ skip-levels = 1
 cursor-line = "warning"  # show warnings and errors on the cursorline inline
 
 [editor.word-completion]
-trigger-length = 3
+trigger-length = 2
